# anki-memory-card

./: .cursorrules  .env.infra.example  .pre-commit-config.yml  Makefile  PRD.md  README.md  TODO.md  docker-compose.yml
.github/: FUNDING.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: deploy-production.yml  deploy-staging.yml  issue-manager.yml  lint-backend.yml  test-backend.yml  test-docker-compose.yml
api/: .env.example  .gitignore  Makefile  alembic.ini  anki.db  anki_ai.db  anki_parser.py  app.py  celery_app_control.py  celery_client_instance.py  celery_worker.py  create_anki_card.py  infra.yml  pyproject.toml  requirements.txt
api/.db/: IntelliVocab.db
api/api/: deps.py
api/api/v1/: api.py
api/api/v1/endpoints/: cards.py  notification_settings.py  sse.py  statistics.py  users.py
api/app/: auth.py  database.py  main.py  models.py  spaced_repetition.py
api/core/: config.py  db.py  loguru_logger.py  retry_with_backoff.py  security.py  spaced_repetition.py
api/corelib/: config.py  db.py  email.py  error_code.py  loguru_logger.py  retry_with_backoff.py  security.py  sse.py
api/corelib/tasks/: __init__.py  email_task.py  email_task_api.py  helper.py
api/crud/: crud_card.py  crud_statistic.py  crud_user.py  curd_notification_setting.py
api/middlewares/: recover_panic_and_report_latency.py
api/migrations/: env.py
api/models/: card.py  notification_settings.py  user.py
api/schemas/: card.py  notification_settings.py  statistics.py  user.py
api/src/: celery_app_control.py  celery_worker.py
api/src/api/v1/: api.py
api/src/api/v1/endpoints/: cards.py  statistics.py  utils.py
api/src/corelib/: error_code.py  spaced_repetition.py
api/src/corelib/tasks/: __init__.py  email_task.py  email_task_api.py  helper.py
api/src/crud/: crud_statistic.py  crud_user.py  curd_notification_setting.py
api/src/email-templates/: new_account.html  reset_password.html
api/src/middlewares/: recover_panic_and_report_latency.py
web/: Makefile  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: custom.css  layout.tsx  page.tsx  providers.tsx
web/app/activate/: page.tsx
web/app/cards/: page.tsx
web/app/forgot-password/: page.tsx
web/components/: SSEMessageDisplay.tsx  expandable-textarea.tsx  icons.tsx  markdown-preview.tsx  navbar-wrapper.tsx  navbar.tsx  single-pricing-card.tsx  testimonials.tsx  theme-provider.tsx  theme-toggle.tsx
web/hooks/: use-sse.ts
web/lib/: api.ts  cookies.ts
(+29 files in other folders)
