[project]
name = "anki-memory-card"
version = "0.1.0"
description = "Anki AI"
authors = [
    { name = "Adam Zhou", email = "summychou@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "aiomysql>=0.2.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.1",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "celery>=5.5.2",
    "fastapi[all]>=0.115.12",
    "google-genai>=1.16.1",
    "httptools>=0.6.4",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pycryptodome>=3.23.0",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "redis>=6.2.0",
    "resend>=2.10.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "sse-starlette>=2.3.6",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    "E501",
    "T201",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
